--- a/RadDiagramSample/Resources/TempResources.xaml
+++ b/RadDiagramSample/Resources/TempResources.xaml
@@ -1,7 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:telerik="clr-namespace:Telerik.Windows.Controls;assembly=Telerik.Windows.Controls.Diagrams"
-                    xmlns:views="clr-namespace:RadDiagramSample.Views"
                     xmlns:extensions="clr-namespace:Telerik.Windows.Controls.Diagrams.Extensions;assembly=Telerik.Windows.Controls.Diagrams.Extensions">
 
 
@@ -10,11 +8,26 @@
             <StackPanel>
                 <TextBlock Text="{Binding Timestamp}"/>
                 <TextBlock Text="{Binding Name}"/>
-                <!--<extensions:RadGeometryDropDownButton>
-                    <extensions:RadGeometryDropDownButton.DropDownContent>
-                        <extensions:SettingsPane Width="235" MinHeight="205" />
-                    </extensions:RadGeometryDropDownButton.DropDownContent>
-                </extensions:RadGeometryDropDownButton>-->
+                <StackPanel x:Name="controlAButtonPanel" Background="Transparent">
+                    <extensions:RadGeometryDropDownButton PopupPlacementTarget="{Binding ElementName=controlAButtonPanel}">
+                        <extensions:RadGeometryDropDownButton.DropDownContent>
+                            <extensions:SettingsPane Height="100px" Width="200px" Margin="10" Padding="10">
+                                <extensions:SettingsPane.Template>
+                                    <ControlTemplate>
+                                        <StackPanel>
+                                            <TextBox Text="{Binding Timestamp,Mode=TwoWay}"/>
+                                            <ComboBox>
+                                                <ComboBoxItem> Greater Than</ComboBoxItem>
+                                                <ComboBoxItem> Less Than</ComboBoxItem>
+                                                <ComboBoxItem> Equal To</ComboBoxItem>
+                                            </ComboBox>
+                                        </StackPanel>
+                                    </ControlTemplate>
+                                </extensions:SettingsPane.Template>
+                            </extensions:SettingsPane>
+                        </extensions:RadGeometryDropDownButton.DropDownContent>
+                    </extensions:RadGeometryDropDownButton>
+                </StackPanel>
             </StackPanel>
         </Border>
     </DataTemplate>
