--- a/RadDiagramSample/Views/DesignerView.xaml
+++ b/RadDiagramSample/Views/DesignerView.xaml
@@ -2,8 +2,8 @@
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
-        xmlns:views="clr-namespace:RadDiagramSample.Views" xmlns:radDiagramSample="clr-namespace:RadDiagramSample"
-        Title="MainWindow" Height="550" Width="725">
+                xmlns:views="clr-namespace:RadDiagramSample.Views"
+                Title="MainWindow" Height="550" Width="725">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -24,12 +24,12 @@
         <views:Toolbox/>
         
         <!-- Designer -->
-        <radDiagramSample:Designer x:Name="Diagram"
+        <views:Designer x:Name="Diagram"
                             Grid.Row="0"
                             Grid.Column="1"
                             PreviewDrop="RadDiagram_PreviewDrop"
                             Style="{StaticResource DesignerDiagramStyle}">
-        </radDiagramSample:Designer>
+        </views:Designer>
        
         
         <telerik:RadDiagramNavigationPane Diagram="{Binding ElementName=Diagram}" x:Name="NavigationPane"
