--- a/RadDiagramSample/Views/Designer.xaml
+++ b/RadDiagramSample/Views/Designer.xaml
@@ -6,5 +6,6 @@
              xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
              mc:Ignorable="d"  
              x:Name="Diagram"
-             ConnectionManipulationCompleted="Diagram_ConnectionManipulationCompleted">
+             ConnectionManipulationCompleted="Diagram_ConnectionManipulationCompleted"
+             PreviewDrop="Diagram_PreviewDrop">
 </telerik:RadDiagram>
